@@ -1,12 +1,10 @@
-@comment $NetBSD: PLIST,v 1.5 2003/09/01 15:31:14 jlam Exp $
-include/libnbcompat/extern.h
+@comment $NetBSD: PLIST,v 1.6 2003/09/03 03:28:28 jlam Exp $
 include/libnbcompat/err.h
 include/libnbcompat/ftpglob.h
 include/libnbcompat/fts.h
 include/libnbcompat/getopt.h
 include/libnbcompat/md5.h
 include/libnbcompat/mtree.h
-include/libnbcompat/namespace.h
 include/libnbcompat/nbcompat.h
 include/libnbcompat/nbconfig.h
 include/libnbcompat/nbtypes.h
@@ -15,7 +13,6 @@ include/libnbcompat/pwcache.h
 include/libnbcompat/rmd160.h
 include/libnbcompat/sha1.h
 include/libnbcompat/sha2.h
-include/libnbcompat/stat_flags.h
 include/libnbcompat/util.h
 include/libnbcompat/vis.h
 lib/libnbcompat.a
