@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3214 2003/09/02 17:58:22 epg Exp $
+$NetBSD: CHANGES,v 1.3215 2003/09/03 03:28:23 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3489,3 +3489,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated gmplayer to 1.0rc1 [jmmv 2003-09-02]
 	Updated mencoder to 1.0rc1 [jmmv 2003-09-02]
 	Updated subversion to 0.28.2 [epg 2003-09-02]
+	Updated libnbcompat to 20030824 [jlam 2003-09-02]
